Agregue el submodulo de allegro pero se rompio algo, seguro algun cambio que habia e hcho aca pero no en el repo de allegro

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -229,6 +229,7 @@
     <ClInclude Include="MVC\ProyectileDrawer.h" />
     <ClInclude Include="MVC\ScoreObserver.h" />
     <ClInclude Include="MVC\StageObserver.h" />
+    <ClInclude Include="MVC\WindowUpdater.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="map.csv" />
