--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClInclude Include="MVC\EnemyDrawer.h">
       <Filter>Header Files\MVC</Filter>
     </ClInclude>
+    <ClInclude Include="MVC\WindowUpdater.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
