Funciona el movimiento del green fatty y cree un nuevo tipo de logger menos invasivo

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -206,6 +206,7 @@
     <ClCompile Include="MVC\StageObserver.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MVC\FattyLogger.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Logica\juego\Game.h" />
     <ClInclude Include="Logica\Personajes\Being.h" />
