--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -143,13 +143,16 @@
     <ClInclude Include="Logica\Personajes\Shooter.h">
       <Filter>Header Files\Logic\Personajes</Filter>
     </ClInclude>
-    <ClInclude Include="Logger.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MVC\EnemyDrawer.h">
       <Filter>Header Files\MVC</Filter>
     </ClInclude>
     <ClInclude Include="MVC\WindowUpdater.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Logger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\FattyLogger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
