El fatty ya dispara y funciona perfecto

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -136,7 +136,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -149,7 +149,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -164,7 +164,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -181,7 +181,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -206,6 +206,7 @@
     <ClCompile Include="MVC\StageObserver.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MVC\FireBallProjectile.h" />
     <ClInclude Include="MVC\FattyLogger.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Logica\juego\Game.h" />
