--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -155,6 +155,9 @@
     <ClInclude Include="MVC\FattyLogger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MVC\FireBallProjectile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
