Cree el observer que meustra la informacion del personaje principal

--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -158,6 +158,9 @@
     <ClInclude Include="MVC\FireBallProjectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MVC\PlayerInfoObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
