--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -228,6 +228,7 @@
     <ClInclude Include="MVC\EventHandler.h" />
     <ClInclude Include="MVC\Observer.h" />
     <ClInclude Include="MVC\PlayerDrawer.h" />
+    <ClInclude Include="MVC\PlayerInfoObserver.h" />
     <ClInclude Include="MVC\ProyectileDrawer.h" />
     <ClInclude Include="MVC\ScoreObserver.h" />
     <ClInclude Include="MVC\StageObserver.h" />
