Reescribiendo las funciones de movimiento de todo para poder hacer todo modular

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -191,6 +191,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Logica\Personajes\Base Classes\Jumper.cpp" />
     <ClCompile Include="Logica\juego\Game.cpp" />
     <ClCompile Include="Logica\Personajes\Being.cpp" />
     <ClCompile Include="Logica\Personajes\CrazyGuy.cpp" />
@@ -204,8 +205,11 @@
     <ClCompile Include="MVC\PlayerDrawer.cpp" />
     <ClCompile Include="MVC\ProyectileDrawer.cpp" />
     <ClCompile Include="MVC\StageObserver.cpp" />
+    <ClCompile Include="Logica\Personajes\Base Classes\Slider.cpp" />
+    <ClCompile Include="Logica\Personajes\SnowBall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h" />
     <ClInclude Include="MVC\FireBallProjectile.h" />
     <ClInclude Include="MVC\FattyLogger.h" />
     <ClInclude Include="Logger.h" />
@@ -220,7 +224,7 @@
     <ClInclude Include="Logica\Personajes\Projectiles\SnowProjectile.h" />
     <ClInclude Include="Logica\Personajes\PurpleGuy.h" />
     <ClInclude Include="Logica\Personajes\Score.h" />
-    <ClInclude Include="Logica\Personajes\Shooter.h" />
+    <ClInclude Include="Logica\Personajes\Base Classes\Shooter.h" />
     <ClInclude Include="MVC\AllegroController.h" />
     <ClInclude Include="MVC\Controller.h" />
     <ClInclude Include="MVC\EnemyDrawer.h" />
@@ -233,6 +237,8 @@
     <ClInclude Include="MVC\ScoreObserver.h" />
     <ClInclude Include="MVC\StageObserver.h" />
     <ClInclude Include="MVC\WindowUpdater.h" />
+    <ClInclude Include="Logica\Personajes\Base Classes\Slider.h" />
+    <ClInclude Include="Logica\Personajes\SnowBall.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="map.csv" />
