--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -78,6 +78,15 @@
     <ClCompile Include="Logica\Personajes\PurpleGuy.cpp">
       <Filter>Source Files\Logic\Personajes</Filter>
     </ClCompile>
+    <ClCompile Include="Logica\Personajes\Base Classes\Slider.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Logica\Personajes\SnowBall.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Logica\Personajes\Base Classes\Jumper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MVC\AllegroController.h">
@@ -140,9 +149,6 @@
     <ClInclude Include="Logica\Personajes\Projectiles\SnowProjectile.h">
       <Filter>Header Files\Logic\Personajes</Filter>
     </ClInclude>
-    <ClInclude Include="Logica\Personajes\Shooter.h">
-      <Filter>Header Files\Logic\Personajes</Filter>
-    </ClInclude>
     <ClInclude Include="MVC\EnemyDrawer.h">
       <Filter>Header Files\MVC</Filter>
     </ClInclude>
@@ -159,6 +165,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MVC\PlayerInfoObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Logica\Personajes\Base Classes\Shooter.h">
+      <Filter>Header Files\Logic\Personajes</Filter>
+    </ClInclude>
+    <ClInclude Include="Logica\Personajes\Base Classes\Slider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Logica\Personajes\SnowBall.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
