Rinaldi chupame la pija

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -235,6 +235,7 @@
     <ClInclude Include="MVC\PlayerInfoObserver.h" />
     <ClInclude Include="MVC\ProyectileDrawer.h" />
     <ClInclude Include="MVC\ScoreObserver.h" />
+    <ClInclude Include="MVC\SnowBallObserver.h" />
     <ClInclude Include="MVC\StageObserver.h" />
     <ClInclude Include="MVC\WindowUpdater.h" />
     <ClInclude Include="Logica\Personajes\Base Classes\Slider.h" />
