--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -179,6 +179,9 @@
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MVC\SnowBallObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
