--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -140,7 +140,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;%(AdditionalLibraryDirectories);C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -153,7 +153,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Guido\Documents\GitHub\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;$(SolutionDir)SecretSnowBros\Vendors\Allw\All\bin\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Guido\Documents\GitHub\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;$(SolutionDir)SecretSnowBros\Vendors\Allw\All\bin\x64\Debug;%(AdditionalLibraryDirectories);C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -170,7 +170,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;%(AdditionalLibraryDirectories);C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -187,7 +187,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;%(AdditionalLibraryDirectories);C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
