--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -242,7 +242,7 @@
     <ClInclude Include="Logica\Personajes\SnowBall.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="map.csv" />
+    <None Include="map1.csv" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
