--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -185,7 +185,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="map.csv">
+    <None Include="map1.csv">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
