--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -137,6 +137,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>GreatComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -150,6 +151,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>GreatComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -165,6 +167,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>GreatComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -182,6 +185,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>GreatComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -242,7 +246,6 @@
     <ClInclude Include="Logica\Personajes\SnowBall.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="map1.csv" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
