THE FIRE IS SHOOTING AT US

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -150,6 +150,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>ShittyComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -182,6 +183,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>ShittyComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
