Saque el modo del greenpmand e debug

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -152,7 +152,6 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>ShittyComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -186,9 +185,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
-
       <PreprocessorDefinitions>ShittyComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -216,6 +213,7 @@
     <ClCompile Include="Logica\Personajes\SnowBall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Logica\juego\FSM.h" />
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h" />
     <ClInclude Include="MVC\FireBallProjectile.h" />
     <ClInclude Include="MVC\FattyLogger.h" />
