--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -182,6 +182,9 @@
     <ClInclude Include="MVC\SnowBallObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Logica\juego\FSM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
