--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -195,6 +195,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FSM.cpp" />
     <ClCompile Include="Logica\Personajes\Base Classes\Jumper.cpp" />
     <ClCompile Include="Logica\juego\Game.cpp" />
     <ClCompile Include="Logica\Personajes\Being.cpp" />
