--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="Logica\Personajes\Base Classes\Jumper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FSM.cpp">
+      <Filter>Source Files\Logic\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MVC\AllegroController.h">
