trying to make sounds work

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -173,7 +173,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(ProjectName)\vendors\Allw\Allw\bin\x64\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -191,7 +191,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(ProjectName)\vendors\Allw\Allw\bin\x64\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -204,19 +204,18 @@
     <ClCompile Include="Logica\Personajes\Player.cpp" />
     <ClCompile Include="Logica\Personajes\PurpleGuy.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="MVC\AllegroController.cpp" />
-    <ClCompile Include="MVC\EventHandler.cpp" />
-    <ClCompile Include="MVC\PlayerDrawer.cpp" />
-    <ClCompile Include="MVC\ProyectileDrawer.cpp" />
-    <ClCompile Include="MVC\StageObserver.cpp" />
+    <ClCompile Include="MVC\Controllers\AllegroController.cpp" />
+    <ClCompile Include="MVC\Controllers\EventHandler.cpp" />
+    <ClCompile Include="MVC\Observers\PlayerDrawer.cpp" />
+    <ClCompile Include="MVC\Observers\ProyectileDrawer.cpp" />
+    <ClCompile Include="MVC\Observers\StageObserver.cpp" />
     <ClCompile Include="Logica\Personajes\Base Classes\Slider.cpp" />
     <ClCompile Include="Logica\Personajes\SnowBall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logica\juego\FSM.h" />
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h" />
-    <ClInclude Include="MVC\FireBallProjectile.h" />
-    <ClInclude Include="MVC\FattyLogger.h" />
+    <ClInclude Include="MVC\Observers\FireBallProjectile.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Logica\juego\Game.h" />
     <ClInclude Include="Logica\Personajes\Being.h" />
@@ -230,19 +229,21 @@
     <ClInclude Include="Logica\Personajes\PurpleGuy.h" />
     <ClInclude Include="Logica\Personajes\Score.h" />
     <ClInclude Include="Logica\Personajes\Base Classes\Shooter.h" />
-    <ClInclude Include="MVC\AllegroController.h" />
-    <ClInclude Include="MVC\Controller.h" />
-    <ClInclude Include="MVC\EnemyDrawer.h" />
-    <ClInclude Include="MVC\Event.h" />
-    <ClInclude Include="MVC\EventHandler.h" />
-    <ClInclude Include="MVC\Observer.h" />
-    <ClInclude Include="MVC\PlayerDrawer.h" />
-    <ClInclude Include="MVC\PlayerInfoObserver.h" />
-    <ClInclude Include="MVC\ProyectileDrawer.h" />
-    <ClInclude Include="MVC\ScoreObserver.h" />
-    <ClInclude Include="MVC\SnowBallObserver.h" />
-    <ClInclude Include="MVC\StageObserver.h" />
-    <ClInclude Include="MVC\WindowUpdater.h" />
+    <ClInclude Include="MVC\Controllers\AllegroController.h" />
+    <ClInclude Include="MVC\Controllers\Controller.h" />
+    <ClInclude Include="MVC\Observers\EnemyDrawer.h" />
+    <ClInclude Include="MVC\Controllers\Event.h" />
+    <ClInclude Include="MVC\Controllers\EventHandler.h" />
+    <ClInclude Include="MVC\Observers\MonsterSound.h" />
+    <ClInclude Include="MVC\Observers\Observer.h" />
+    <ClInclude Include="MVC\Observers\PlayerDrawer.h" />
+    <ClInclude Include="MVC\Observers\PlayerInfoObserver.h" />
+    <ClInclude Include="MVC\Observers\PlayerSound.h" />
+    <ClInclude Include="MVC\Observers\ProyectileDrawer.h" />
+    <ClInclude Include="MVC\Observers\ScoreObserver.h" />
+    <ClInclude Include="MVC\Observers\SnowBallObserver.h" />
+    <ClInclude Include="MVC\Observers\StageObserver.h" />
+    <ClInclude Include="MVC\Observers\WindowUpdater.h" />
     <ClInclude Include="Logica\Personajes\Base Classes\Slider.h" />
     <ClInclude Include="Logica\Personajes\SnowBall.h" />
   </ItemGroup>
