--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -42,21 +42,6 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MVC\AllegroController.cpp">
-      <Filter>Source Files\MVC</Filter>
-    </ClCompile>
-    <ClCompile Include="MVC\EventHandler.cpp">
-      <Filter>Source Files\MVC</Filter>
-    </ClCompile>
-    <ClCompile Include="MVC\PlayerDrawer.cpp">
-      <Filter>Source Files\MVC</Filter>
-    </ClCompile>
-    <ClCompile Include="MVC\ProyectileDrawer.cpp">
-      <Filter>Source Files\MVC</Filter>
-    </ClCompile>
-    <ClCompile Include="MVC\StageObserver.cpp">
-      <Filter>Source Files\MVC</Filter>
-    </ClCompile>
     <ClCompile Include="Logica\juego\Game.cpp">
       <Filter>Source Files\Logic\Game</Filter>
     </ClCompile>
@@ -87,35 +72,23 @@
     <ClCompile Include="Logica\Personajes\Base Classes\Jumper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MVC\Controllers\AllegroController.cpp">
+      <Filter>Source Files\MVC</Filter>
+    </ClCompile>
+    <ClCompile Include="MVC\Controllers\EventHandler.cpp">
+      <Filter>Source Files\MVC</Filter>
+    </ClCompile>
+    <ClCompile Include="MVC\Observers\StageObserver.cpp">
+      <Filter>Source Files\MVC</Filter>
+    </ClCompile>
+    <ClCompile Include="MVC\Observers\ProyectileDrawer.cpp">
+      <Filter>Source Files\MVC</Filter>
+    </ClCompile>
+    <ClCompile Include="MVC\Observers\PlayerDrawer.cpp">
+      <Filter>Source Files\MVC</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MVC\AllegroController.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\Controller.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\Event.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\EventHandler.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\Observer.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\PlayerDrawer.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\ProyectileDrawer.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\ScoreObserver.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\StageObserver.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
     <ClInclude Include="Logica\juego\Game.h">
       <Filter>Header Files\Logic\Game</Filter>
     </ClInclude>
@@ -149,22 +122,7 @@
     <ClInclude Include="Logica\Personajes\Projectiles\SnowProjectile.h">
       <Filter>Header Files\Logic\Personajes</Filter>
     </ClInclude>
-    <ClInclude Include="MVC\EnemyDrawer.h">
-      <Filter>Header Files\MVC</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\WindowUpdater.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Logger.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\FattyLogger.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\FireBallProjectile.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MVC\PlayerInfoObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Logica\Personajes\Base Classes\Shooter.h">
@@ -179,11 +137,56 @@
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MVC\SnowBallObserver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Logica\juego\FSM.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Controllers\AllegroController.h">
+      <Filter>Header Files\MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Controllers\Controller.h">
+      <Filter>Header Files\MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Controllers\Event.h">
+      <Filter>Header Files\MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Controllers\EventHandler.h">
+      <Filter>Header Files\MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\WindowUpdater.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\StageObserver.h">
+      <Filter>Header Files\MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\SnowBallObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\ScoreObserver.h">
+      <Filter>Header Files\MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\ProyectileDrawer.h">
+      <Filter>Header Files\MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\PlayerSound.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\PlayerInfoObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\PlayerDrawer.h">
+      <Filter>Header Files\MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\Observer.h">
+      <Filter>Header Files\MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\MonsterSound.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\FireBallProjectile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\EnemyDrawer.h">
+      <Filter>Header Files\MVC</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
