--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -37,6 +37,12 @@
     <Filter Include="Source Files\Logic\Personajes">
       <UniqueIdentifier>{a8f047b6-3ed8-43ef-860a-f792baa06dd7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Logic\UI">
+      <UniqueIdentifier>{032a5088-0116-4b6a-a458-48b2a0682aff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Logic\UI">
+      <UniqueIdentifier>{acf85428-bb64-437f-a489-8d6b1e86c4c8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -87,8 +93,11 @@
     <ClCompile Include="Logica\Personajes\Base Classes\Jumper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="FSM.cpp">
-      <Filter>Source Files\Logic\Game</Filter>
+    <ClCompile Include="Logica\UI\FSM.cpp">
+      <Filter>Source Files\Logic\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="Logica\UI\UI.cpp">
+      <Filter>Source Files\Logic\UI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -185,8 +194,11 @@
     <ClInclude Include="MVC\SnowBallObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Logica\juego\FSM.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Logica\UI\FSM.h">
+      <Filter>Header Files\Logic\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="Logica\UI\UI.h">
+      <Filter>Header Files\Logic\UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
