--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -195,7 +195,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FSM.cpp" />
     <ClCompile Include="Logica\Personajes\Base Classes\Jumper.cpp" />
     <ClCompile Include="Logica\juego\Game.cpp" />
     <ClCompile Include="Logica\Personajes\Being.cpp" />
@@ -204,6 +203,8 @@
     <ClCompile Include="Logica\Personajes\Monster.cpp" />
     <ClCompile Include="Logica\Personajes\Player.cpp" />
     <ClCompile Include="Logica\Personajes\PurpleGuy.cpp" />
+    <ClCompile Include="Logica\UI\FSM.cpp" />
+    <ClCompile Include="Logica\UI\UI.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MVC\AllegroController.cpp" />
     <ClCompile Include="MVC\EventHandler.cpp" />
@@ -214,8 +215,9 @@
     <ClCompile Include="Logica\Personajes\SnowBall.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Logica\juego\FSM.h" />
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h" />
+    <ClInclude Include="Logica\UI\FSM.h" />
+    <ClInclude Include="Logica\UI\UI.h" />
     <ClInclude Include="MVC\FireBallProjectile.h" />
     <ClInclude Include="MVC\FattyLogger.h" />
     <ClInclude Include="Logger.h" />
