Reacomode un par de cosas

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -195,6 +195,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FSM.cpp" />
     <ClCompile Include="Logica\Personajes\Base Classes\Jumper.cpp" />
     <ClCompile Include="Logica\juego\Game.cpp" />
     <ClCompile Include="Logica\Personajes\Being.cpp" />
@@ -220,7 +221,6 @@
     <ClInclude Include="Logica\UI\UI.h" />
     <ClInclude Include="MVC\FireBallProjectile.h" />
     <ClInclude Include="MVC\FattyLogger.h" />
-    <ClInclude Include="Logger.h" />
     <ClInclude Include="Logica\juego\Game.h" />
     <ClInclude Include="Logica\Personajes\Being.h" />
     <ClInclude Include="Logica\Personajes\CrazyGuy.h" />
