--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -84,6 +84,24 @@
     <ClCompile Include="Logica\UI\UI.cpp">
       <Filter>Source Files\Logic\UI</Filter>
     </ClCompile>
+    <ClCompile Include="MVC\Controllers\AllegroController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MVC\Controllers\EventHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MVC\Observers\PlayerDrawer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MVC\Observers\ProyectileDrawer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MVC\Observers\StageObserver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FSM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logica\juego\Game.h">
@@ -119,9 +137,6 @@
     <ClInclude Include="Logica\Personajes\Projectiles\SnowProjectile.h">
       <Filter>Header Files\Logic\Personajes</Filter>
     </ClInclude>
-    <ClInclude Include="Logger.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Logica\Personajes\Base Classes\Shooter.h">
       <Filter>Header Files\Logic\Personajes</Filter>
     </ClInclude>
@@ -132,9 +147,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Logica\juego\FSM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MVC\Controllers\AllegroController.h">
@@ -184,6 +196,15 @@
     </ClInclude>
     <ClInclude Include="Logica\UI\UI.h">
       <Filter>Header Files\Logic\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\FireBallProjectile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\FattyLogger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MVC\Observers\EnemyDrawer.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
