moved some files

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -203,8 +203,8 @@
     <ClCompile Include="Logica\Personajes\Monster.cpp" />
     <ClCompile Include="Logica\Personajes\Player.cpp" />
     <ClCompile Include="Logica\Personajes\PurpleGuy.cpp" />
-    <ClCompile Include="Logica\UI\FSM.cpp" />
-    <ClCompile Include="Logica\UI\UI.cpp" />
+    <ClCompile Include="UI\FSM.cpp" />
+    <ClCompile Include="UI\UI.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MVC\Controllers\AllegroController.cpp" />
     <ClCompile Include="MVC\Controllers\EventHandler.cpp" />
@@ -216,8 +216,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h" />
-    <ClInclude Include="Logica\UI\FSM.h" />
-    <ClInclude Include="Logica\UI\UI.h" />
+    <ClInclude Include="UI\FSM.h" />
+    <ClInclude Include="UI\UI.h" />
     <ClInclude Include="MVC\FireBallProjectile.h" />
     <ClInclude Include="MVC\FattyLogger.h" />
     <ClInclude Include="Logica\juego\Game.h" />
