--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -78,12 +78,6 @@
     <ClCompile Include="Logica\Personajes\Base Classes\Jumper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Logica\UI\FSM.cpp">
-      <Filter>Source Files\Logic\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="Logica\UI\UI.cpp">
-      <Filter>Source Files\Logic\UI</Filter>
-    </ClCompile>
     <ClCompile Include="MVC\Controllers\AllegroController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -98,6 +92,12 @@
     </ClCompile>
     <ClCompile Include="MVC\Observers\StageObserver.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UI\FSM.cpp">
+      <Filter>Source Files\Logic\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UI\UI.cpp">
+      <Filter>Source Files\Logic\UI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -188,12 +188,6 @@
     <ClInclude Include="MVC\Observers\MonsterSound.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Logica\UI\FSM.h">
-      <Filter>Header Files\Logic\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="Logica\UI\UI.h">
-      <Filter>Header Files\Logic\UI</Filter>
-    </ClInclude>
     <ClInclude Include="MVC\FireBallProjectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -202,6 +196,12 @@
     </ClInclude>
     <ClInclude Include="MVC\Observers\EnemyDrawer.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UI\FSM.h">
+      <Filter>Header Files\Logic\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="UI\UI.h">
+      <Filter>Header Files\Logic\UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
