--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -216,6 +216,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h" />
+    <ClInclude Include="MVC\Observers\FireBallProjectile.h" />
     <ClInclude Include="UI\FSM.h" />
     <ClInclude Include="UI\UI.h" />
     <ClInclude Include="MVC\FireBallProjectile.h" />
