--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -203,6 +203,9 @@
     <ClInclude Include="UI\UI.h">
       <Filter>Header Files\Logic\UI</Filter>
     </ClInclude>
+    <ClInclude Include="MVC\Observers\FireBallProjectile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
