--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -215,6 +215,7 @@
     <ClCompile Include="Logica\Personajes\SnowBall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Logica\juego\Cmap.h" />
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h" />
     <ClInclude Include="MVC\Observers\FireBallProjectile.h" />
     <ClInclude Include="UI\FSM.h" />
