Commenting and stuff

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -218,6 +218,7 @@
     <ClInclude Include="Logica\juego\Cmap.h" />
     <ClInclude Include="Logica\Personajes\Base Classes\Jumper.h" />
     <ClInclude Include="MVC\Observers\FireBallProjectile.h" />
+    <ClInclude Include="MVC\Observers\StageSound.h" />
     <ClInclude Include="UI\FSM.h" />
     <ClInclude Include="UI\UI.h" />
     <ClInclude Include="MVC\FireBallProjectile.h" />
