--- a/SecretSnowBros/SecretSnowBros.vcxproj.filters
+++ b/SecretSnowBros/SecretSnowBros.vcxproj.filters
@@ -206,6 +206,9 @@
     <ClInclude Include="Logica\juego\Cmap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MVC\Observers\StageSound.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
