Got rid of most defines and added a config.ini file that has all the information needed

--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -137,11 +137,13 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>GreatComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>
+      </PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;%(AdditionalLibraryDirectories);C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug</AdditionalLibraryDirectories>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -151,11 +153,13 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>ShittyComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>
+      </PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\Users\Guido\Documents\GitHub\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;$(SolutionDir)SecretSnowBros\Vendors\Allw\All\bin\x64\Debug;%(AdditionalLibraryDirectories);C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug</AdditionalLibraryDirectories>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -167,7 +171,8 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>GreatComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>
+      </PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -185,7 +190,8 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SecretSnowBros\vendors\Allw\Allw\Include;$(SolutionDir)SecretSnowBros</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>ShittyComputer;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>
+      </PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
