fixed the ini file

--- a/SecretSnowBros/config.ini
+++ b/SecretSnowBros/config.ini
@@ -1,7 +1,5 @@
 [SnowBros]
-highscore=11310
-Player1ID=123
-
+highscore=0
 
 
 [Font]
@@ -36,10 +34,10 @@ InstructionText=Instructions
 BackText=Go Back
 PlayAgainText=Play Again
 
-TitleImagePath=Images\\BackgroundMenu.png
-InstructionsImagePath=Images\\BackgroundControl.png
-GameOverImagePath=Images\\GameOverBackground.png
-WonImagePath=Images\\WonBackground.png
+TitleImagePath=Images/BackgroundMenu.png
+InstructionsImagePath=Images/BackgroundControl.png
+GameOverImagePath=Images/GameOverBackground.png
+WonImagePath=Images/WonBackground.png
 
 [GameSprite]
 GroundImagePath=Images/GroundSprite.png
