bye bye ugly allegro code

--- a/SecretSnowBros/config.ini
+++ b/SecretSnowBros/config.ini
@@ -1,5 +1,5 @@
 [SnowBros]
-highscore=0
+highscore=7210
 
 
 [Font]
@@ -15,17 +15,17 @@ InstructionsPath=Music/Soundtrack/Night Man.ogg
 
 [PlayerMusic]
 
-ShootMusicPath =Music/Character/ShootDM.wav
-JumpMusicPath = Music/Character/Jump.wav
+ShootMusicPath=Music/Character/ShootDM.wav
+JumpMusicPath=Music/Character/Jump.wav
 
 [MonsterMusic]
 
-ShootMusicPath =Music/Character/ShootDM.wav
-JumpMusicPath = Music/Character/Jump.wav
+ShootMusicPath=Music/Character/ShootDM.wav
+JumpMusicPath=Music/Character/Jump.wav
 
 
 [GameMusic]
-MusicPath = Music/Soundtrack/Day Man.ogg
+MusicPath=Music/Soundtrack/Day Man.ogg
 
 [Menu]
 PlayText=Play
@@ -41,7 +41,7 @@ WonImagePath=Images/WonBackground.png
 
 [GameSprite]
 GroundImagePath=Images/GroundSprite.png
-BackgroundImagePath =Images/BackgroundSprite.png
+BackgroundImagePath=Images/BackgroundSprite.png
 
 [RegularPlayerSprite]
 Path=Images/Player/Normal/PS
