--- a/SecretSnowBros/SecretSnowBros.vcxproj
+++ b/SecretSnowBros/SecretSnowBros.vcxproj
@@ -158,7 +158,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>Allw.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Guido\Documents\GitHub\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;$(SolutionDir)SecretSnowBros\Vendors\Allw\All\bin\x64\Debug;%(AdditionalLibraryDirectories);C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\FRANSISCO\Desktop\GitKraken\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;C:\Users\Guido\Documents\GitHub\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug;$(SolutionDir)SecretSnowBros\Vendors\Allw\All\bin\x64\Debug;%(AdditionalLibraryDirectories);C:\Users\luckd\Documents\Facultad\2018Q1\EDA\SecretSnowBros\SecretSnowBros\vendors\Allw\Allw\bin\x64\Debug</AdditionalLibraryDirectories>
       <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
